[gd_scene load_steps=11 format=3 uid="uid://brr55dgynt6pf"]

[ext_resource type="Script" path="res://Scripts/wasp_enemy.gd" id="1_fwbjq"]
[ext_resource type="Texture2D" uid="uid://ccb8ilujifnhp" path="res://Sprites/Enemies/world1_enemies/Wasp.png" id="1_ma3h2"]

[sub_resource type="Animation" id="Animation_a4h0f"]
resource_name = "Back_fly"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_ax8ae"]
resource_name = "Fly_frony"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_oan2h"]
resource_name = "Left_fly"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_30qr7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ovdl6"]
resource_name = "Right_fly"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6jwu"]
_data = {
"Back_fly": SubResource("Animation_a4h0f"),
"Fly_frony": SubResource("Animation_ax8ae"),
"Left_fly": SubResource("Animation_oan2h"),
"RESET": SubResource("Animation_30qr7"),
"Right_fly": SubResource("Animation_ovdl6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_k4fii"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krfbi"]
size = Vector2(21, 20)

[node name="Wasp_enemy" type="Node2D"]
position = Vector2(500, 500)

[node name="CharacterBody2D" type="Area2D" parent="."]
position = Vector2(4.66666, 0)
collision_layer = 8
collision_mask = 25
script = ExtResource("1_fwbjq")
rect_radius = 300.0
enemy_speed = 150.0

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
light_mask = 4
visibility_layer = 4
position = Vector2(-5, -2)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_ma3h2")
hframes = 3
vframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
speed_scale = 0.8
libraries = {
"": SubResource("AnimationLibrary_g6jwu")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-4.66666, 2)
shape = SubResource("CircleShape2D_k4fii")
one_way_collision_margin = 2.0

[node name="area_det" type="Area2D" parent="."]

[node name="collision_det" type="CollisionShape2D" parent="area_det"]
shape = SubResource("RectangleShape2D_krfbi")
debug_color = Color(0.843137, 0.266667, 0.678431, 0.419608)

[connection signal="body_entered" from="CharacterBody2D" to="CharacterBody2D" method="_on_body_entered"]
[connection signal="body_exited" from="CharacterBody2D" to="CharacterBody2D" method="_on_body_exited"]
[connection signal="body_entered" from="area_det" to="CharacterBody2D" method="_on_area_det_body_entered"]
[connection signal="body_exited" from="area_det" to="CharacterBody2D" method="_on_area_det_body_exited"]
